# AzbestOS-limine

./: .gitignore  CMakeLists.txt  bochsrc.bxrc  debug.gdb  gen-idt.py  limine.conf  linker.ld  start.bat
limine/: limine
src/: kernel_main.c
src/dbg/: print.c  print.h
src/drivers/cpu/: io.h
src/drivers/cpu/APIC/: apic.c  apic.h
src/drivers/cpu/IOAPIC/: ioapic.c  ioapic.h
src/drivers/cpu/gdt/: gdt.c  gdt.h
src/drivers/cpu/idt/: idt.c  idt.h  load_idt.asm  ptrs.c
src/drivers/display/: display.c  display.h
src/drivers/uart/: uart.c  uart.h
src/init/: cpu.asm  gdt.asm  init.asm
src/runtime/: nanoprintf.c
